# pty-t

./: Cargo.toml  README.md  README.zh-CN.md
.github/workflows/: build-packages.yml
crates/client/: Cargo.toml
crates/client/src/: admin.rs  input.rs  keys.rs  main.rs  render.rs
crates/client/tests/: ansi_rows.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  manager.rs  session.rs  state.rs  types.rs
crates/core/tests/: client_id.rs  core_api.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: cli.rs  client_id.rs  connection.rs  lib.rs  main.rs  server.rs  session.rs  state.rs  types.rs
crates/server/tests/: client_id.rs  core_api.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
crates/shell_manager/: Cargo.toml
crates/shell_manager/src/: lib.rs  websocket.rs
