[package]
name = "pty_t_client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "c"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
futures-util = "0.3"
pty_t_demo = { path = "../shared" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.29"
vt100 = "0.16"
