[package]
name = "pty_t_server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ptytd"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
pty_t_core = { path = "../core" }
pty_t_demo = { path = "../shared" }
serde_json = "1"
shell-words = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.29"
